bm: fixed distortion on homepage breakpoint between 760 and 767

--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -12,7 +12,7 @@
   }
 }
 
-@media (min-width: 740px) and (max-width: 759px) {
+@media (min-width: 740px) and (max-width: 767px) { /*759*/
   .view {
     height: 1000px!important;
   }
@@ -29,21 +29,6 @@
       background: #1C2331!important;
   }
 }
-
-/* distortion between this viewports */
-/* @media (min-width: 760px) and (max-width: 767px) {
-  .intro-box {
-    margin: 8rem 1rem 1rem 1rem;
-    height: fit-content!important;
-  }
-  .mask {
-    position: relative;
-    height: fit-content;
-  }
-  .view {
-    height: 840px !important;
-  }
-} */
 
 /* my styles */
 .navbar-brand {
